force-app/main/default/objects/SemanticTag__c/SemanticTag__c.object-meta.xml
<CustomObject>
    <description>Meta data tags that can be applied to Help records to enhance meaning and allow for a greater degree of implicit meaning</description>
    <label>Semantic Tag</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Semantic Tags</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>