force-app/main/default/objects/SemanticTag__c/fields/CollectiveObverse__c.field-meta.xml
<CustomField>
    <fullName>CollectiveObverse__c</fullName>
    <description>Noun describing the Obverse of this Tag as applied to collections of records</description>
    <inlineHelpText>Noun describing the Obverse of this Tag as applied to collections of records</inlineHelpText>
    <label>Collective Obverse</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>