force-app/main/default/objects/SemanticTag__c/fields/CollectiveTag__c.field-meta.xml
<CustomField>
    <fullName>CollectiveTag__c</fullName>
    <description>Noun describing collections of records imbued with this Tag</description>
    <inlineHelpText>Noun describing collections of records imbued with this Tag</inlineHelpText>
    <label>Collective Tag</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>