force-app/main/default/objects/SemanticTag__c/fields/Obverse__c.field-meta.xml
<CustomField>
    <fullName>Obverse__c</fullName>
    <description>Word or short phrase starting with a present tense verb that describes the implied obverse conferred by assigning this tag to a record</description>
    <inlineHelpText>Word or short phrase starting with a present tense verb that describes the implied obverse conferred by assigning this tag to a record</inlineHelpText>
    <label>Obverse</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>