force-app/main/default/objects/SemanticTag__c/fields/ShortObverse__c.field-meta.xml
<CustomField>
    <fullName>ShortObverse__c</fullName>
    <description>Abbreviated version of the full Obverse of the Tag</description>
    <inlineHelpText>Abbreviated version of the full Obverse of the Tag</inlineHelpText>
    <label>Short Obverse</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>