force-app/main/default/objects/SemanticTag__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>Word or short phrase starting with a present tense verb that describes  the semantics conferred by assigning this tag to a record</description>
    <inlineHelpText>Word or short phrase starting with a present tense verb that describes  the semantics conferred by assigning this tag to a record</inlineHelpText>
    <label>Tag</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>