force-app/main/default/objects/SemanticTag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tag__c</columns>
    <columns>CollectiveTag__c</columns>
    <columns>ShortObverse__c</columns>
    <columns>Obverse__c</columns>
    <columns>CollectiveObverse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>